--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -236,6 +236,7 @@ interface Ethernet52.142
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 142
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf PROD
    ip address 172.17.0.5/31
 !
@@ -244,6 +245,7 @@ interface Ethernet52.666
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 666
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf ATTRACTED-VRF-FROM-UPLINK
    ip address 172.17.0.5/31
 !
@@ -252,6 +254,7 @@ interface Ethernet52.1000
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 1000
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf IT
    ip address 172.17.0.5/31
 !
@@ -268,6 +271,7 @@ interface Ethernet53.142
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 142
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf PROD
    ip address 172.17.0.7/31
 !
@@ -276,6 +280,7 @@ interface Ethernet53.666
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 666
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf ATTRACTED-VRF-FROM-UPLINK
    ip address 172.17.0.7/31
 !
@@ -284,6 +289,7 @@ interface Ethernet53.1000
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 1000
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf IT
    ip address 172.17.0.7/31
 !
