--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -235,6 +235,7 @@ interface Ethernet52.142
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 142
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf PROD
    ip address 172.17.0.9/31
 !
@@ -243,6 +244,7 @@ interface Ethernet52.666
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 666
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf ATTRACTED-VRF-FROM-UPLINK
    ip address 172.17.0.9/31
 !
@@ -251,6 +253,7 @@ interface Ethernet52.1000
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 1000
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf IT
    ip address 172.17.0.9/31
 !
@@ -267,6 +270,7 @@ interface Ethernet53.142
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 142
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf PROD
    ip address 172.17.0.11/31
 !
@@ -275,6 +279,7 @@ interface Ethernet53.666
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 666
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf ATTRACTED-VRF-FROM-UPLINK
    ip address 172.17.0.11/31
 !
@@ -283,6 +288,7 @@ interface Ethernet53.1000
    no shutdown
    mtu 9214
    encapsulation dot1q vlan 1000
+   flow tracker hardware WAN-FLOW-TRACKER
    vrf IT
    ip address 172.17.0.11/31
 !
