--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-no-common-path-group.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-no-common-path-group.yml
@@ -181,6 +181,8 @@ ethernet_interfaces:
   encapsulation_dot1q_vlan: 1000
   mtu: 9214
   ip_address: 172.17.0.3/31
+  flow_tracker:
+    hardware: WAN-FLOW-TRACKER
 - name: Ethernet52.142
   peer: site-ha-disabled-leaf
   peer_interface: Ethernet2.142
@@ -192,6 +194,8 @@ ethernet_interfaces:
   encapsulation_dot1q_vlan: 142
   mtu: 9214
   ip_address: 172.17.0.3/31
+  flow_tracker:
+    hardware: WAN-FLOW-TRACKER
 - name: Ethernet52.666
   peer: site-ha-disabled-leaf
   peer_interface: Ethernet2.666
@@ -203,6 +207,8 @@ ethernet_interfaces:
   encapsulation_dot1q_vlan: 666
   mtu: 9214
   ip_address: 172.17.0.3/31
+  flow_tracker:
+    hardware: WAN-FLOW-TRACKER
 - name: Ethernet1
   peer_type: l3_interface
   ip_address: dhcp
