--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-edge2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-edge2B.yml
@@ -3,4 +3,4 @@
 # Other variables inherited from CV_PATHFINDER_TESTS
 
 wan_ha:
-  lan_ha_path_group_name: arista-ha
+  lan_ha_path_group_name: CUSTOM_LAN_HA
