--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3549,16 +3549,14 @@ keys:
   wan_ha:
     documentation_options:
       table: wan-settings
+    description: 'PREVIEW: This key is currently not supported'
     type: dict
     keys:
       lan_ha_path_group_name:
         type: str
         default: LAN_HA
-        description: 'PREVIEW: This key is currently not supported
-
-
-          When WAN HA is enabled for a site if `wan_mode: cv-pathfinder`, a default
-          path-group is injected to form DPS tunnels over LAN.
+        description: 'When WAN HA is enabled for a site if `wan_mode: cv-pathfinder`,
+          a default path-group is injected to form DPS tunnels over LAN.
 
           This key allows to overwrite the default LAN HA path-group name.'
   wan_ipsec_profiles:
