--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/flow_tracking_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/flow_tracking_settings.schema.yml
@@ -39,7 +39,7 @@ keys:
         keys:
           name:
             type: str
-            default: DPI-EXPORTER
+            default: CV-TELEMETRY
             description: Exporter Name
           template_interval:
             description: Template interval in milliseconds
@@ -48,4 +48,4 @@ keys:
               - str
             min: 5000
             max: 3600000
-            default: 3000000
+            default: 3600000
