--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
@@ -6,10 +6,10 @@ flow tracking hardware
    tracker FLOW-TRACKER
       record export on inactive timeout 70000
       record export on interval 300000
-      exporter DPI-EXPORTER
+      exporter CV-TELEMETRY
          collector 127.0.0.1
          local interface Loopback0
-         template interval 3000000
+         template interval 3600000
    no shutdown
 !
 service routing protocols model multi-agent
