--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
@@ -588,7 +588,7 @@ router_path_selection:
     keepalive:
       interval: 300
       failure_threshold: 5
-  - name: LAN_HA
+  - name: CUSTOM_LAN_HA
     id: 65535
     flow_assignment: lan
     local_interfaces:
@@ -605,40 +605,40 @@ router_path_selection:
   - name: LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
     path_groups:
     - name: MPLS
-    - name: LAN_HA
+    - name: CUSTOM_LAN_HA
   - name: LB-DEFAULT-AVT-POLICY-VIDEO
     path_groups:
     - name: MPLS
-    - name: LAN_HA
+    - name: CUSTOM_LAN_HA
   - name: LB-DEFAULT-AVT-POLICY-DEFAULT
     path_groups:
     - name: MPLS
       priority: 4223
-    - name: LAN_HA
+    - name: CUSTOM_LAN_HA
   - name: LB-PROD-AVT-POLICY-VOICE
     path_groups:
     - name: MPLS
-    - name: LAN_HA
+    - name: CUSTOM_LAN_HA
     jitter: 42
     lowest_hop_count: true
   - name: LB-PROD-AVT-POLICY-VIDEO
     path_groups:
     - name: MPLS
-    - name: LAN_HA
+    - name: CUSTOM_LAN_HA
     loss_rate: '42.0'
   - name: LB-PROD-AVT-POLICY-MPLS-ONLY
     path_groups:
     - name: MPLS
-    - name: LAN_HA
+    - name: CUSTOM_LAN_HA
   - name: LB-PROD-AVT-POLICY-DEFAULT
     path_groups:
     - name: MPLS
       priority: 2
-    - name: LAN_HA
+    - name: CUSTOM_LAN_HA
   - name: LB-DEFAULT-POLICY-DEFAULT
     path_groups:
     - name: MPLS
-    - name: LAN_HA
+    - name: CUSTOM_LAN_HA
 router_traffic_engineering:
   enabled: true
 stun:
